# anpr-pi

./: .gitignore  README.md  config.example.yaml  pyproject.toml
.github/workflows/: build-raspi-image.yml  python-check.yml
image/firstboot/: bootstrap.sh
image/pi-gen/: config
image/pi-gen/stage-anpr/: 00-packages  00-run.sh
services/: anpr-bootstrap.service  anpr-pi.service
src/anpr_pi/: __main__.py  alerts.py  anpr.py  camera.py  cli.py  config.py  country.py  models.py  pipeline.py  storage.py
